# desenvolvimento_fullstack_com_django

./: .gitignore
mysite/: pyproject.toml
mysite/contacts/: forms.py  urls.py  views.py
mysite/contacts/templates/: create.html
mysite/mysite/: admin.py  pyproject.toml  settings.py  urls.py
mysite/polls/: admin.py  models.py  views.py
