[project]
name = "desenvolvimento_fullstack_com_django"
version = "0.1.0"
description = ""
authors = [
    {name = "Patrícia Gheller",email = "patricia.gheller.1985@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
